@@ -1230,12 +1230,18 @@ argument_list|(
 name|docTerm
 argument_list|)
 operator|||
+operator|(
+name|prefixToken
+operator|!=
+literal|null
+operator|&&
 name|docTerm
 operator|.
 name|startsWith
 argument_list|(
 name|prefixToken
 argument_list|)
+operator|)
 condition|)
 block|{
 name|DocsAndPositionsEnum
