@@ -484,6 +484,10 @@ Bug Fixes
   high frequency terms in extremely large indices (Robert Muir, Mike
   McCandless)
 
+* LUCENE-6093: Don't throw NullPointerException from
+  BlendedInfixSuggester for lookups that do not end in a prefix
+  token.  (jane chang via Mike McCandless)
+
 Documentation
 
 * LUCENE-5392: Add/improve analysis package documentation to reflect
